--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,23 @@ button i{
     height: 456px;
 }
 /* player blogs */
+
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+   
+    /* margin-left: 180px;
+    margin-right: 180px; */
+    padding: 5px;
+    place-items: center;
+}
+.player p{
+    font-size: 16px;
+}
+.player h3{
+    font-size: :28px;
+}
+
 .card-container{
     padding: 0px 156px;
     padding-top: 30px;
@@ -116,8 +133,10 @@ button i{
 .highlight-detail{
     display: block;
     padding-left: 15px;
-
+    margin-right:10px;
+    margin-left: 20px;
 }
+
 .highlight-img{
     padding-right: 15px;
 }
@@ -148,18 +167,3 @@ button i{
 
 
 /* extra --  */
-.blogs{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-   
-    /* margin-left: 180px;
-    margin-right: 180px; */
-    padding: 5px;
-    place-items: center;
-}
-.player p{
-    font-size: 16px;
-}
-.player h3{
-    font-size: :28px;
-}
