--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1161px;
+    width: 80%;
     height: 44px;
 }
 .nav-manu{
@@ -32,6 +32,17 @@ nav{
     text-decoration: none;
     padding-left:36px;
 }
+
+.nav-manu-mobile{
+    height: 24px;
+    color: white;
+    font-size: 16px;
+    text-decoration: none;
+    padding-left:36px;
+    display: none;
+}
+
+
 button{
     color: white;
     font-size: 16px;
@@ -144,6 +155,36 @@ button i{
     width: 567px;
     height: 427px;
 }
+/* Feedback forum */
+
+.form{
+    margin: 20px;
+    border-color: rgb(243, 0, 49);
+    border: 2px solid;
+    border-radius: 3px;
+    padding: 10px;
+    background-color: rgb(174, 251, 253);
+}
+input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 1px solid #555;
+    background-color: lightblue;
+  
+  }
+  textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+  
+  }
 
 /* footer areas  */
 
@@ -167,3 +208,45 @@ button i{
 
 
 /* extra --  */
+.team-name{
+    background-color: cornflowerblue;
+    text-align: center;
+}
+.grid-container{
+    display: grid;
+   /* grid-template-columns: 200px 200px 200px;*/
+   /* grid-template-columns: repeat(3,200px);*/
+    grid-template-columns: repeat(3,1fr);
+    /*grid-gap: 20px;*/
+    grid-gap: 20px 5px;
+}
+.grid-cell{
+    border: 1px solid blue;
+    text-align: center;
+    background-color: bisque;
+    border-radius: 3px;
+    font-size: 24px;
+}
+
+
+
+
+
+
+/* mobile device */
+
+@media only screen and (max-width: 500px){
+    /* body{
+        width: 100%;
+    } */
+ 
+  .banner{
+      display: none;
+  }
+  .blogs{
+      display: none;
+  }
+  footer{
+      display: none;
+  }
+ }
