--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ button i{
 .text-box{
     width: 485px;
     height: 230px;
-    font-size: 64px;
+    font-size: 55px;
     justify-content: inherit;
 }
 .banner-pciture img{
@@ -229,24 +229,140 @@ input {
 }
 
 
-
-
-
-
 /* mobile device */
 
 @media only screen and (max-width: 500px){
-    /* body{
-        width: 100%;
+    /* header{
+        background-color: darkblue;
     } */
- 
-  .banner{
-      display: none;
-  }
-  .blogs{
-      display: none;
-  }
-  footer{
-      display: none;
-  }
+    nav{
+        margin-left: 4%;
+        margin-right: 30%;
+        padding-top: 30px;
+        padding-left: 0px;
+        padding-right: 0px;
+        display: flex;
+        /* position: relative; */
+        justify-content: space-between;
+        background-color: #2D25A0;
+
+    }
+    .nav-manu{
+        display: none;
+    }
+    .nav-mobile{
+        font-size: 16px;
+        color: cornsilk;
+        padding-left: 16px;
+    }
+/* ---banner-- */
+.banner{
+    margin-left: 5%;
+    margin-right: 5%;
+    display: block;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.banner span{
+    margin-left: 0%;
+}
+.text-box{
+    font-size: 38px;
+    text-align: right;
+    padding: 0px;
+    margin: 0mm;
+}
+.banner-pciture img{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 300px;
+    height: 400px;
+    padding-left: 20px;
+}
+button{
+    width: 100px;
+    height: 28px;
+    font-size: 12px;
+    font-weight: bold;
+}
+/* ---------blogs */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+   
+    /* margin-left: 180px;
+    margin-right: 180px; */
+    padding: 1px;
+    place-items: center;
+}
+
+.name-card{
+    padding-right: 30px;
+    width: 240px;
+    height: 390px;
+    margin-left: -3px;
+}
+.name-card div h3{
+    margin-bottom: 0px;
+    margin-top: 0px;
+    padding-top: 3px;
+    font-size: 16px;
+}
+.name-card div p{
+    font-size: 12px;
+}
+
+/* -----------blogs ends  */
+
+.highlight-box{
+
+}
+.highlight-box{
+    display: block;
+    padding-left: 15px;
+}
+.highlight-img img{
+    padding-top: 10px;
+    width: 300px;
+    height: 300px;
+}
+ .highlight-detail{
+    padding-left: 0px;
+ }   
+.highlight-detail p{
+    font-size: 12px;
+    font-weight: normal;
+}
+.highlight-detail h3{
+    font-size: 16px;
+}
+
+/* grid cell  */
+.grid-cell{
+    width: 85px;
+    font-size: 12px;
+    padding: 5px;
+}
+.grid-cell h1{
+    font-size: 16px;
+}
+.team-name{
+    padding-left: 18px;
+    border-radius: 16px;
+    padding-bottom: 10px;
+}
+.copyright img{
+    width: 260px;
+    height: 60px;
+    padding-top: 22px;
+    overflow-x: hidden;
+    margin-left: 0px;
+
+}
+
+
+
+
+
+
  }
