--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,10 @@ input {
     font-size: 24px;
 }
 
-
+/* hidder */
+.nav-mobile{
+    display: none;
+}
 /* mobile device */
 
 @media only screen and (max-width: 500px){
