--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ input {
         width: 100%;
         color: rgb(0, 0, 0);
         padding-top: 158px;
-        font-size: 0.7em;
+        font-size: 16px;
         text-align: center;
         padding-bottom: 20px;
 
